--- a/view/common/block-layout/browse-preview.phtml
+++ b/view/common/block-layout/browse-preview.phtml
@@ -43,29 +43,44 @@ $lang = $this->lang();
 <ul class="resources <?php echo ($isGrid) ? 'resource-grid' : 'resource-list'; ?>">
 <?php
 foreach ($this->resources as $resource):
-$heading = $headingTerm ? $resource->value($headingTerm, ['default' => $translate('[Untitled]')]) : $resource->displayTitle();
-
-$body = null;
-if ($bodyTerm) {
-    $bodyTermValue = $resource->value($bodyTerm);
-    $bodyResource = $bodyTermValue ? $bodyTermValue->valueResource() : null;
-    $body = ($bodyTermValue && $bodyResource) ? $bodyResource->displayTitle() : $bodyTermValue;
-} else {
-    // Based on resource template
-    $template = $resource->resourceTemplate();
-    if ($template && $template->descriptionProperty()) {
-        if (($filterLocale == 0) || !($bodyTermValue = $resource->value($template->descriptionProperty()->term(), ['lang' => $lang]))) {
-            $bodyTermValue = $resource->value($template->descriptionProperty()->term());
+    $heading = null;
+    if ($headingTerm) {
+        if (!($heading = $resource->value($headingTerm, ['lang' => $lang]))) {
+            $heading = $resource->value($headingTerm, ['default' => $translate('[Untitled]')]);
         }
-        if (null !== $bodyTermValue) {
-            $bodyResource = $bodyTermValue ? $bodyTermValue->valueResource() : null;
-            $body = ($bodyTermValue && $bodyResource) ? $bodyResource->displayTitle() : $bodyTermValue;
+    } else {
+        $template = $resource->resourceTemplate();
+        if ($template && $template->titleProperty()) {
+            if (($filterLocale == 0) || !($heading = $resource->value($template->titleProperty()->term(), ['lang' => $lang]))) {
+                $heading = $resource->value($template->titleProperty()->term());
+            }
         }
     }
-}
-if (!$body) {
-    $body = $resource->displayDescription();
-}
+    if (!$heading) {
+        $heading = $resource->displayTitle();
+    }
+
+    $body = null;
+    if ($bodyTerm) {
+        $bodyTermValue = $resource->value($bodyTerm);
+        $bodyResource = $bodyTermValue ? $bodyTermValue->valueResource() : null;
+        $body = ($bodyTermValue && $bodyResource) ? $bodyResource->displayTitle() : $bodyTermValue;
+    } else {
+        // Based on resource template
+        $template = $resource->resourceTemplate();
+        if ($template && $template->descriptionProperty()) {
+            if (($filterLocale == 0) || !($bodyTermValue = $resource->value($template->descriptionProperty()->term(), ['lang' => $lang]))) {
+                $bodyTermValue = $resource->value($template->descriptionProperty()->term());
+            }
+            if (null !== $bodyTermValue) {
+                $bodyResource = $bodyTermValue ? $bodyTermValue->valueResource() : null;
+                $body = ($bodyTermValue && $bodyResource) ? $bodyResource->displayTitle() : $bodyTermValue;
+            }
+        }
+    }
+    if (!$body) {
+        $body = $resource->displayDescription();
+    }
 ?>
     <li class="<?php echo $this->resourceType; ?> resource <?php echo ($isGrid) ? '' : 'media-object'; ?>">
         <?php if ($thumbnail = $this->thumbnail($resource, 'medium')): ?>
