--- a/view/common/local-body.phtml
+++ b/view/common/local-body.phtml
@@ -49,7 +49,7 @@ if (isset($resource)) {
         }
     }
     if (!$body) {
-        $body = $item->displayDescription();
+        $body = $resource->displayDescription();
     }
     
     switch ($method) {
