--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -107,6 +107,12 @@ if ($galleryDisplay) {
 
 <?php endif; ?>
 
+<div id="resource-controls">
+	<?php if ($item->userIsAllowed('update')): ?>
+    <a target="_blank" href="<?php echo $item->adminUrl('edit'); ?>" class="button"><?php echo $translate('Edit item'); ?></a>
+    <?php endif; ?>
+</div>
+
 <div id="resource-values" class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
     <?php echo $item->displayValues(); ?>
