--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -12,14 +12,17 @@ $tracksPresent = $this->DetectTracks($itemMedia);
 $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $this->lang();
 
+
+
 if ($galleryDisplay) {
-    $this->headLink()->appendStylesheet($this->assetUrl('vendor/lightgallery/css/lightgallery-bundle.min.css'));
-    $this->headScript()->appendFile($this->assetUrl('vendor/lightgallery/lightgallery.min.js'));
-    $this->headScript()->appendFile($this->assetUrl('js/show.js'));
-    $this->headScript()->appendFile($this->assetUrl('vendor/lightgallery/plugins/thumbnail/lg-thumbnail.min.js'));
-    $this->headScript()->appendFile($this->assetUrl('vendor/lightgallery/plugins/video/lg-video.min.js'));
-    $this->headScript()->appendFile($this->assetUrl('vendor/lightgallery/plugins/pager/lg-pager.min.js'));
-    $this->headScript()->appendFile($this->assetUrl('vendor/lightgallery/plugins/zoom/lg-zoom.min.js'));
+    /** BEGIN MODM MODIFICATION **/
+    $this->headScript()->appendFile($this->assetUrl('js/lightslider.js'));
+    $this->headLink()->prependStylesheet($this->assetUrl('css/lightslider.css'));
+    $this->headScript()->appendFile($this->assetUrl('js/lightgallery.js'));
+    $this->headScript()->appendFile($this->assetUrl('js/lg-zoom.js'));
+    $this->headScript()->appendFile($this->assetUrl('js/lg-fullscreen.js'));
+    $this->headLink()->prependStylesheet($this->assetUrl('css/lightgallery.css'));
+    /** END MODM MODIFICATION **/
     
     $lightMedia = [];
     $otherMedia = [];
@@ -41,70 +44,29 @@ if ($galleryDisplay) {
 <h3 class="label"><?php echo $translate('Item'); ?></h3>
 </div>
 
-<div class="grid-x">
+
 <?php if ($galleryDisplay): ?>
-    <?php if (count($lightMedia) > 0): ?>
-    <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
-        <?php foreach ($lightMedia as $media): ?>
-            <?php 
-                $mediaType = $media->mediaType();
-                $mediaRenderer = $media->renderer();
-                $source = ($media->originalUrl()) ? $media->originalUrl() : $media->source();
-                $subHtml = "<div class='lg-caption'>" . $media->displayTitle() . "</div>"; 
-            ?>
-            
-            <?php if (strpos($mediaType, 'image') !== false): ?>
-                <div data-src="<?php echo $source; ?>" data-thumb="<?php echo $escape($media->thumbnailUrl('square')); ?>" class="media resource" data-sub-html="<?php echo $subHtml; ?>">
-                    <?php echo $media->render(); ?>
-                </div>
-            <?php elseif (strpos($mediaRenderer, 'youtube') !== false): ?>
-                <a
-                    class="media resource"
-                    data-src="<?php echo $source; ?>"
-                    data-poster="<?php echo $media->thumbnailDisplayUrl('square'); ?>"
-                    data-sub-html="<?php echo $subHtml; ?>"
-                >
-                </a>
-            <?php else: ?>
-                <?php
-                    $trackHtml = '';
-                    if ($tracksPresent) {
-                        $originalFilename = pathinfo($media->source(), PATHINFO_FILENAME);
-                        $trackHtml .=  '"tracks": [';
-                        foreach ($otherMedia as $key => $media) {
-                            $trackHtml .= $this->OutputTrack($media, $originalFilename);
-                            unset($otherMedia[$key]);
-                        }
-                        $trackHtml = rtrim($trackHtml, ',');
-                        $trackHtml .= '],'; 
-                    }
-                ?>    
-                <a
-                    class="media resource"
-                    data-video='{"source": [{"src":"<?php echo $source; ?>", "type":"<?php echo $mediaType; ?>"}], <?php echo $trackHtml; ?> "attributes": {"preload": false, "controls": true}}'
-                    data-download-url="<?php echo $source; ?>" 
-                    data-poster="<?php echo $media->thumbnailDisplayUrl('square'); ?>"
-                    data-sub-html="<?php echo $subHtml; ?>"
-                >  
-                    <img
-                        class="img-responsive"
-                        src="<?php echo $media->thumbnailDisplayUrl('square'); ?>"
-                    />
-                </a>
-            <?php endif; ?>
-        <?php endforeach; ?>
-    </div>
-    <?php endif; ?>
+    <?php if ($embedMedia && $itemMedia): ?>
+    <div class="media-slider">
+    	<ul id="imageGallery">
+    	<?php foreach ($itemMedia as $media): ?>
+  			<li data-thumb="<?php echo $escape($media->thumbnailUrl('square')); ?>" data-src="<?php echo $media->originalUrl(); ?>">
+    			<img src="<?php echo $escape($media->thumbnailUrl('large')); ?>" />
+  			</li>
+  		<?php endforeach; ?>
+		</ul>
+	</div>
+	<div class="grid-x">
+	<?php endif; ?>
 <?php else: ?>
+	<div class="grid-x">
     <?php if (count($itemMedia) > 0): ?>
     <div class="<?php echo ($embedMedia) ? 'media-embeds' : 'media-list' ?>">
     <?php foreach ($itemMedia as $media): ?>
         <?php echo ($embedMedia) ? $media->render() : $media->linkPretty(); ?>
     <?php endforeach; ?>
     </div>
-<?php endif; ?>
-
-
+	<?php endif; ?>
 <?php endif; ?>
 
 <div id="resource-controls">
@@ -175,3 +137,44 @@ if ($galleryDisplay) {
     </div>
     
 </div>
+
+<script>
+	$(document).ready(function() {
+    var slider = $('#imageGallery').lightSlider({
+		prevHtml: '<span class="custom-prev-html" style="color: black"><i class="fas fa-chevron-left"></i></span>',
+		nextHtml: '<span class="custom-next-html" style="color: black"><i class="fas fa-chevron-right"></i></span',
+        gallery:true,
+        item:1,
+        adaptiveHeight: true,
+        thumbItem: 8,
+        thumbMargin: 30,
+
+        responsive : [
+            {
+                breakpoint:800,
+                settings: {
+                    thumbItem:5,
+                    slideMargin:10,
+                  }
+            },
+            {
+                breakpoint: 520,
+                settings: {
+                    thumbItem:4,
+                    slideMargin: 5,
+                  }
+            }
+        ],
+
+        onSliderLoad: function(el) {
+            el.lightGallery({
+                selector: '#imageGallery .lslide',
+                download: false,
+        		fullScreen: true,
+        		zoom: true,
+        		actualSize: true,
+            });
+        }
+    });
+  });
+  </script>
