Switch to minimal manifest for iOS web app

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -4,10 +4,6 @@ $stylesheet = $this->themeSetting('stylesheet');
 $this->htmlElement('html')->setAttribute('lang', $this->lang());
 $this->headMeta()->setCharset('utf-8');
 $this->headMeta()->appendName('viewport', 'width=device-width, initial-scale=1');
-
-// MODM : For apple iOS full screen
-$this->headMeta()->appendName("apple-mobile-web-app-capable", "yes");
-
 $this->headTitle($this->setting('installation_title', 'Omeka S'))->setSeparator(' · ');
 if (isset($stylesheet)) {
     $this->headLink()->prependStylesheet($this->assetUrl("css/$stylesheet.css"));    
@@ -18,6 +14,8 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka
 
 // MODM : For apple iOS icon
 $this->headLink(['href' => "/apple-touch-icon.png", 'rel' => "apple-touch-icon"]);
+// MODM : For apple iOS full screen
+$this->headLink(['href' => "/manifest.webmanifest", 'rel' => "manifest"]);
 
 $this->headScript()->prependFile($this->assetUrl('vendor/foundation/foundation.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
