--- a/view/omeka/site/item/browse.phtml
+++ b/view/omeka/site/item/browse.phtml
@@ -9,6 +9,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $this->lang();
 $valueLang = $filterLocale ? [$lang, ''] : null;
 
+
 $query = $this->params()->fromQuery();
 $itemSetShow = isset($itemSet);
 if ($itemSetShow) {
@@ -116,16 +117,60 @@ $sortHeadings = [
 <ul class="resources <?php echo ($isGrid) ? 'resource-grid' : 'resource-list'; ?>">
 <?php
 foreach ($items as $item):
-    $heading = $headingTerm ? $item->value($headingTerm, ['default' => $translate('[Untitled]'), 'lang' => $valueLang]) : $item->displayTitle(null, $valueLang);
-    $body = $bodyTerm ? $item->value($bodyTerm, ['lang' => $valueLang]) : $item->displayDescription(null, $valueLang);
+    //** BEGIN MODM MODIFICATION **/
+    $heading = $headingTerm ? $item->value($headingTerm, ['default' => $translate('[Untitled]'), 'lang' => ($filterLocale ? [$lang, ''] : null)]) : $item->displayTitle(null, ($filterLocale ? [$lang, ''] : null));
+    $body = null;
+    if ($bodyTerm) {
+        $bodyTermValue = $item->value($bodyTerm);
+        $bodyResource = $bodyTermValue ? $bodyTermValue->valueResource() : null;
+        $body = ($bodyTermValue && $bodyResource) ? $bodyResource->displayTitle(null, ($filterLocale ? [$lang, ''] : null)) : $bodyTermValue;
+    } else {
+        // Based on resource template
+        $template = $item->resourceTemplate();
+        if ($template && $template->descriptionProperty()) {
+            if (($filterLocale == 0) || !($bodyTermValue = $item->value($template->descriptionProperty()->term(), ['lang' => $lang]))) {
+                $bodyTermValue = $item->value($template->descriptionProperty()->term());
+            }
+            if (null !== $bodyTermValue) {
+                $bodyResource = $bodyTermValue ? $bodyTermValue->valueResource() : null;
+                if ($bodyTermValue && $bodyResource) {
+                    if ($headingTerm) {
+                        if (! ($body = $bodyResource->value($headingTerm, ['lang' => $lang]))) {
+                            $body = $bodyResource->value($headingTerm, ['default' => $translate('[Untitled]')]);
+                        }
+                    } else {
+                        $template = $bodyResource->resourceTemplate();
+                        if ($template && $template->titleProperty()) {
+                            if (($filterLocale == 0)
+                                || ! ($body = $bodyResource->value($template->titleProperty()->term(), ['lang' => $lang]))) {
+                                    $body = $bodyResource->value($template->titleProperty()->term());
+                                }
+                        }
+                    }
+                    if (!$body) {
+                        $body = $bodyResource->displayTitle(null, ($filterLocale ? [$lang, ''] : null));
+                    }
+                } else {
+                    $body = $bodyTermValue;
+                }
+            }
+        }
+    }
+    if (!$body) {
+        $body = $item->displayDescription(null, ($filterLocale ? [$lang, ''] : null));
+    }
+    //** END MODM MODIFICATION **/
 ?>
     <li class="item resource <?php echo ($isGrid) ? '' : 'media-object'; ?>">
         <div class="resource-meta <?php echo ($isGrid) ? '' : 'media-object-section'; ?>">
             <?php
-            $linkContent = sprintf('%s<span class="resource-name">%s</span>',
+<!--            $linkContent = sprintf('%s<span class="resource-name">%s</span>',
                 $thumbnail($item, 'medium'),
                 $escape($heading));
-            echo $item->linkRaw($linkContent, null, ['class' => 'resource-link']);
+            echo $item->linkRaw($linkContent, null, ['class' => 'resource-link']); -->
+                // MODM
+                echo $item->linkPretty('medium', $heading, null, null, $lang);
+                // \MODM
             ?>
             <?php if ($body): ?>
             <div class="description <?php echo ($bodyTruncate) ? $bodyTruncate : ''; ?>"><?php echo $escape($body); ?></div>
