--- a/view/omeka/site/item/browse.phtml
+++ b/view/omeka/site/item/browse.phtml
@@ -159,9 +159,13 @@ foreach ($items as $item):
     if (!$body) {
         $body = $item->displayDescription(null, ($filterLocale ? [$lang, ''] : null));
     }
-    //** END MODM MODIFICATION **/
 ?>
-    <li class="item resource <?php echo ($isGrid) ? '' : 'media-object'; ?>">
+    <li class="<?php echo $this->resourceType; ?> resource <?php echo ($isGrid) ? '' : 'media-object'; ?>">
+        <?php if ($thumbnail = $this->thumbnail($item, 'medium')): ?>
+        <div class="resource-image <?php echo ($isGrid) ? '' : 'media-object-section'; ?>">
+            <?php echo $item->linkRaw($thumbnail, null, ['class' => 'thumbnail']); ?>
+        </div>
+        <?php endif; ?>
         <div class="resource-meta <?php echo ($isGrid) ? '' : 'media-object-section'; ?>">
             <?php
 <!--            $linkContent = sprintf('%s<span class="resource-name">%s</span>',
@@ -172,11 +176,13 @@ foreach ($items as $item):
                 echo $item->linkPretty('medium', $heading, null, null, $lang);
                 // \MODM
             ?>
+<!--            <h4><?php echo $item->link($heading); ?></h4>-->
             <?php if ($body): ?>
-            <div class="description <?php echo ($bodyTruncate) ? $bodyTruncate : ''; ?>"><?php echo $escape($body); ?></div>
+            <div class="description"><?php echo $escape($body); ?></div>
             <?php endif; ?>
         </div>
     </li>
+<?php //** END MODM MODIFICATION **/ ?>
 <?php endforeach; ?>
 </ul>
 <?php echo ($itemSetShow) ? '</div>' : ''; ?>
