Adjust title subhead margin

--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -234,7 +234,7 @@ a.resource-link:hover{
 .resource-title {
 
 	& .subhead {
-		margin: 0 .5em 0 0;
+		margin: 0 1rem 0 0;
 		color: $secondary-color;
 		font-style: italic;
 	}
